objects/Search_Widget__c.object
<CustomObject>
    <fields>
        <fullName>Community_Host__c</fullName>
        <description>Live Community URL</description>
        <label>Community Host</label>
        <length>64</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Environment__c</fullName>
        <description>Live Community Environment</description>
        <label>Environment</label>
        <length>64</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Isolation_Env__c</fullName>
        <label>Isolation Env</label>
        <length>64</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Locale__c</fullName>
        <label>Locale</label>
        <length>64</length>
        <required>true</required>
        <type>Text</type>
    </fields>
</CustomObject>